--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# Use root/ as user/password credentials
 version: '3.1'
 
 services:
@@ -15,9 +14,14 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: 55205520
       MYSQL_DATABASE: test
+    volumes:
+      - my-sqldata:/var/lib/mysql
 
   adminer:
     image: adminer
     restart: always
     ports:
       - 8081:8080
+volumes:
+  my-sqldata:
+    driver: local
